--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mi-arbol-binario",
-  "homepage": "https://github.com/mariochain/arbol-binario.git",
+  "homepage": "https://mariochain.github.io/arbol-binario",
   "private": true,
   "version": "0.0.0",
   "type": "module",
